Fix gap for 800 pixels for max-with 800 in offers component

--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -132,7 +132,7 @@
     width: 60%;
     height: 20vh;
     margin-bottom: 10px;
-    gap: 5%;
+    gap: 10%;
   }
 
   .offers-left {
